Refactor Kafka section in FraudDetect documentation for clarity and remove redundant commands